homework_1/ingress.yml

### не удалось использовать эту версию конфига 
### Error from server (InternalError): error when creating "ingress.yml": Internal error occurred: failed calling webhook "validate.nginx.ingress.kubernetes.io": an error on the server ("") has prevented the request from succeeding
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: delicious-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#   - host: arch.homework
#     http:
#       paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: delicious-service
#               port: 
#                 number: 8000


apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: delicious-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/.*/(.*)
          backend:
            serviceName: delicious-service
            servicePort: 8000
